dev/jwindmiller/slurm-17548775.out
  File "009_ContourL_Reanalysis_CWV.py", line 20
    009
      ^
SyntaxError: invalid token
 
Batch Job Summary Report for Job "wrap" (17548775) on daint
-----------------------------------------------------------------------------------------------------
             Submit            Eligible               Start                 End    Elapsed  Timelimit 
------------------- ------------------- ------------------- ------------------- ---------- ---------- 
2019-10-18T17:55:48 2019-10-18T17:55:48 2019-10-18T19:08:31 2019-10-18T19:09:05   00:00:34   00:30:00 
-----------------------------------------------------------------------------------------------------
Username    Account     Partition   NNodes   Energy
----------  ----------  ----------  ------  --------------
jwindmil    s916        normal           1      222 joules
 
This job did not utilize any GPUs
 
----------------------------------------------------------
Scratch File System        Files       Quota
--------------------  ----------  ----------
/scratch/snx3000               7     1000000
 
